GENERAL IMPROVEMENTS:	
- Modified DF to cache subscription relevant information. This speeds up performances when detecting subscribed agents to be notified about registration updates
- Modified FullResourceManager to avoid annoying stack traces at platform shutdown
- Modified MainContainerImpl to start the AMS and DF threads in the SystemAgent Thread Group

BUG-FIXES:
 

LEAP:


ADD-ONS:


DOCUMENTATION:


POSSIBLE BACKWARD INCOMPATIBILITIES:
NONE



MAJOR CHANGES in JADE 3.4.1 (15th November 2006)  
==========================================================================
GENERAL IMPROVEMENTS:	
- Modified HTTP MTP to properly select the XML parser (by Krešimir Jurasovic - University of Zagreb).
- Substituted getHostName() with getCanonicalHostName() in HTTP MTP to resolve domain problems.
- Added support for low-level container introspection by means of the ContainerMonitorAgent (jade_core_AgentContainerImpl_enablemonitor parameter).
- Added method getParam(int index) to JADE commands (jade.core.Command class).
- Modified message tracing mechanism to take the ACLMessage.TRACE user define property into account.
- Improved agent cloning error management.
- Added generation of ShutdownPlatformRequested AMS event (Introspection Ontology)
- Modified ThreadedBehaviourFactory to support Threaded-behaviour suspension.
- Modified default behaviour of jade.wrapper.gatreway.GatewayAgent to automatically call releaseCommand() when a Behaviour is passed in the execute() method of the JadeGateway class.
- Refactored Notification Service to i) use sinks for owned commands, and ii) dispatch ContainerEvents.
- Modified Agent.powerUp() method to avoid starting the agent thread two times. 

BUG-FIXES:
- Fixed bug in SSResponder when initiator and responder are the same agent
- Fixed bug in ParallelBehaviour related to remotion of already terminated children (indicated by Juan A. Suárez-Romero - University of A Coruña)