@@ -4,17 +4,20 @@ GENERAL IMPROVEMENTS:
 - Modified DF to cache subscription relevant information. This speeds up performances when detecting subscribed agents to be notified about registration updates
 - Modified FullResourceManager to avoid annoying stack traces at platform shutdown
 - Modified MainContainerImpl to start the AMS and DF threads in the SystemAgent Thread Group
+- Created CFReflectiveIntrospector to support usage of java.util classes in ontological classes
 
 BUG-FIXES:
  
 
 LEAP:
+- Added support for ServiceHelper retrieval and usage in split container execution mode
 
 
 ADD-ONS:
 
 
 DOCUMENTATION:
+- Updated tutorial on Content Languages and Ontologies with information about the new CFReflectiveIntrospector
 
 
 POSSIBLE BACKWARD INCOMPATIBILITIES:
